[gd_scene load_steps=2 format=3 uid="uid://cbimj6baogiq4"]

[ext_resource type="Script" uid="uid://dh2dvt5x0hf7j" path="res://ui/components/balance_bar.gd" id="1"]

[node name="BalanceBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BarContent" type="Control" parent="Center"]
layout_mode = 2
custom_minimum_size = Vector2(0, 24)

[node name="BarBackground" type="ColorRect" parent="Center/BarContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="ZoneHBox" type="HBoxContainer" parent="Center/BarContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftSpacer" type="Control" parent="Center/BarContent/ZoneHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.325

[node name="Zone" type="ColorRect" parent="Center/BarContent/ZoneHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
mouse_filter = 2
color = Color(0.2, 0.75, 0.3, 0.55)

[node name="RightSpacer" type="Control" parent="Center/BarContent/ZoneHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.325

[node name="ArrowLayer" type="Control" parent="Center/BarContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Arrow" type="ColorRect" parent="Center/BarContent/ArrowLayer"]
layout_mode = 1
mouse_filter = 2
custom_minimum_size = Vector2(4, 24)
color = Color(0.95, 0.95, 0.95, 1)
